--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ services:
   backend:
     container_name: app_backend
     build: ./backend
+    restart: 'always'
     ports:
       - 3001:3001
     platform: linux/x86_64
